--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,19 @@ body {
     text-align: center;
     font-family: "Courier";
 }
+#cabecera {
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: 400;
+    font-size: .8 em;
+}
 #container {
     width: 70%;
     padding: 1em;
